uses another SDK and refactor

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,24 +10,14 @@
     android:orientation="horizontal"
     tools:context=".MainActivity">
 
-    <android.opengl.GLSurfaceView
-        android:id="@+id/thermalView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="4:3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+    />
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:indeterminateBehavior="repeat"
-        app:layout_constraintBottom_toBottomOf="@+id/thermalView"
-        app:layout_constraintEnd_toEndOf="@+id/thermalView"
-        app:layout_constraintStart_toStartOf="@+id/thermalView"
-        app:layout_constraintTop_toTopOf="@+id/thermalView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
